docs: add api docs for user handler
