# internal/delivery/handler/book.go
@@ -23,6 +23,7 @@ func NewBookHandler(usecase usecase.BookUsecase) *BookHandler {
 // @Tags Book
 // @Accept json
 // @Produce json
+// @Security ApiKeyAuth
 // @Param Body body request.BookCreate true "Request body"
 // @Success 201 {object} response.DataResponse{data=entity.Book}
 // @Failure 400 {object} response.ErrorResponse
@@ -49,6 +50,7 @@ func (b *BookHandler) Create(ctx *gin.Context) {
 // @Tags Book
 // @Accept json
 // @Produce json
+// @Security ApiKeyAuth
 // @Param limit query int false "Item count per page"
 // @Param page query int false "List page number"
 // @Success 200 {object} response.ListResponse{data=[]entity.Book}
@@ -76,6 +78,7 @@ func (b *BookHandler) List(ctx *gin.Context) {
 // @Tags Book
 // @Accept json
 // @Produce json
+// @Security ApiKeyAuth
 // @Param id path string true "Book Id"
 // @Success 200 {object} response.DataResponse{data=entity.Book}
 // @Failure 400 {object} response.ErrorResponse
@@ -102,6 +105,7 @@ func (b *BookHandler) Find(ctx *gin.Context) {
 // @Tags Book
 // @Accept json
 // @Produce json
+// @Security ApiKeyAuth
 // @Param id path string true "Book Id"
 // @Param Body body request.BookUpdate true "Request body"
 // @Success 200 {object} response.DataResponse{data=entity.Book}
@@ -131,6 +135,7 @@ func (b *BookHandler) Update(ctx *gin.Context) {
 // @Tags Book
 // @Accept json
 // @Produce json
+// @Security ApiKeyAuth
 // @Param id path string true "Book Id"
 // @Success 200 {object} response.EmptyResponse
 // @Failure 400 {object} response.ErrorResponse
